// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component should render fontFamily and style 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "red",
      "fontFamily": "comic-sans",
    }
  }
>
  Children Text
</Text>
`;

exports[`Text Component should render without issues 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={Object {}}
/>
`;

exports[`Text Component should use values from the theme 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "fontSize": 27.5,
    }
  }
  theme={
    Object {
      "Text": Object {
        "h4": true,
      },
      "colors": Object {
        "divider": "#bcbbc1",
        "error": "#ff190c",
        "grey0": "#393e42",
        "grey1": "#43484d",
        "grey2": "#5e6977",
        "grey3": "#86939e",
        "grey4": "#bdc6cf",
        "grey5": "#e1e8ee",
        "greyOutline": "#bbb",
        "primary": "#2089dc",
        "searchBg": "#303337",
        "secondary": "#8F0CE8",
      },
    }
  }
  updateTheme={[Function]}
>
  Hey
</Text>
`;
